--- a/index.html
+++ b/index.html
@@ -166,14 +166,14 @@
         <img src="./img/project-1.png" alt="">
         <h3>Certificates Drive</h3>
         <div class="header-action-aria">
-          <a href="https://drive.google.com/drive/u/0/folders/1HXcXtYLppYl6Mqoyxkfioc7Lklw-3P6T" class="btn">View</a>
+          <a href="https://drive.google.com/drive/folders/1HXcXtYLppYl6Mqoyxkfioc7Lklw-3P6T?usp=drive_link" class="btn">View</a>
         </div>
       </div>
       <div class="project">
         <img src="./img/project-2.png" alt="">
         <h3>Projects(figma) Drive</h3>
         <div class="header-action-aria">
-          <a href="https://drive.google.com/drive/u/0/folders/1Ugfc-okJW5pW3-nix-2HmGuMZWM2uNBA" class="btn">view</a>
+          <a href="https://drive.google.com/drive/folders/1Ugfc-okJW5pW3-nix-2HmGuMZWM2uNBA?usp=drive_link" class="btn">view</a>
         </div>
       </div>
       <div class="project">
